Finally resolved all issues. Got the Fully Kiosk Browser working properly. There is some code that is not necessary but i am keeping it to demonstrate I understand WebSocket communication and server hosting

--- a/3tvdemo/src/singleVid.html
+++ b/3tvdemo/src/singleVid.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Test</title>
-    <link rel="stylesheet" href="App.css">
 </head>
 
 <body> 
-    <video id="videoPlayer" muted autoplay loop width="100%" height="100vh">
-        <source src="http://localhost:8080/video" type="video/mp4" />
+    <video id="videoPlayer" muted="" autoplay="" loop="" width="200px" height="200px">
+        <source src="/video" type="video/mp4" />
         hi
     </video>
 </body>
